﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-21 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: foreign dropdowns: sort id-content by id 
      and content-id by content
    * libraries/common.lib.php: bug #1330847, undefined index connect_type

2005-10-21 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * db_details_export.php:
      - replaced for() with foreach()
      - dont pollute $GLOBALS['table']
    * libraries/mysql_charsets.lib.php:
      - make use of mysql variable collation_database
      - fixed call to PMA_DBI_fetch_value() (return second field, not first)
    * libraries/database_interface.lib.php:
      extended function PMA_DBI_get_tables_full():
       - make use of information_schema
       - always fill fields for information_schema and show table status
    * db_details_db_info.php: make use of function PMA_DBI_get_tables_full()
    
2005-10-20 Marc Delisle  <lem9@users.sourceforge.net>
    * server_databases.php: security fix
    * libraries/common.lib.php, /grab_globals.lib.php: security fix

2005-10-20 Alexander M. Turek  <me@derrabus.de>
    * libraries/mysql_charsets.lib.php:
      - On MySQL 5.0.6, we don't have to parse SHOW CREATE DATABASE anymore,
        if we just want to get to know a database's default collation;
     - Make use of this fancy new function PMA_DBI_fetch_value().

2005-10-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * sql.php, footer.inc.php: refresh left frame on view creation
    * left.php: view icon for views
    * libraries/left.js: dropped
    * libraries/function.js: tuned PMA_merkRowsInit():
      every table with class data now has mark and hover effect
    * css/phpmyadmin.css.php: nowrap for IE and pre for the rest
    * css/phpmyadmin.css.php, server_status.php: css cleanup
    * db_details_structure.php, db_details_db_info.php:
      - XHTML compliance, styling outsourced, row marker outsourced